@@ -35,6 +35,7 @@ from conformance import ConformsToISetupContext
 from conformance import ConformsToIImportContext
 from conformance import ConformsToIExportContext
 from conformance import ConformsToIChunkableExportContext
+from conformance import ConformsToIChunkableImportContext
 
 
 class DummySite( Folder ):
@@ -49,6 +50,7 @@ class DummyTool( Folder ):
 class DirectoryImportContextTests( FilesystemTestBase
                                  , ConformsToISetupContext
                                  , ConformsToIImportContext
+                                 , ConformsToIChunkableImportContext
                                  ):
 
     _PROFILE_PATH = '/tmp/ICTTexts'
